# microservices

./: .gitignore  manager.py  pyproject.toml
auth_service/: .env-dev-auth-service  config.py  database.py  exceptions.py  main.py
auth_service/auth/: auth.py  constants.py  dao.py  dependencies.py  models.py  router.py
auth_service/dao/: daobase.py
auth_service/models/: __init__.py
proxy/: main.py  reverse_proxy.py
proxy/auth/: router.py  schemas.py
proxy/search/: router.py  schemas.py
search_service/: .env-dev-search-service  config.py  database.py  main.py
search_service/models/: __init__.py
search_service/search/: models.py  router.py  schemas.py
utils/: fill_user_data.py
